--- a/terms.html
+++ b/terms.html
@@ -3,8 +3,17 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#f5f7fb" />
   <title>Terms of Use — GTLabs72</title>
   <meta name="description" content="GTLabs72 terms of use for Smart Notifier and other products." />
+  <script>
+    (function () {
+      try {
+        var t = localStorage.getItem("gtlabs72-theme");
+        if (t === "light" || t === "dark") document.documentElement.setAttribute("data-theme", t);
+      } catch (e) {}
+    })();
+  </script>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Source+Sans+3:wght@400;500;600&display=swap" rel="stylesheet" />
@@ -15,7 +24,10 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="index.html">GTLabs72</a>
-      <a class="cta" href="mailto:support@gtlabs72.com">Contact</a>
+      <div class="header-actions">
+        <button class="theme-toggle" type="button" data-theme-toggle aria-label="Toggle theme">Dark</button>
+        <a class="cta" href="mailto:support@gtlabs72.com">Contact</a>
+      </div>
     </div>
   </header>
 
@@ -51,5 +63,6 @@
       </div>
     </div>
   </main>
+  <script src="script.js" defer></script>
 </body>
 </html>
