--- a/privacy.html
+++ b/privacy.html
@@ -26,7 +26,7 @@
       <a class="logo" href="index.html">GTLabs72</a>
       <div class="header-actions">
         <button class="theme-toggle" type="button" data-theme-toggle aria-label="Toggle theme">Dark</button>
-        <a class="cta" href="mailto:support@gtlabs72.com">Contact</a>
+        <a class="cta" href="mailto:gtlabs72@gmail.com">Contact</a>
       </div>
     </div>
   </header>
@@ -36,37 +36,54 @@
       <div class="section-head">
         <p class="eyebrow">Privacy</p>
         <h1>Privacy Policy</h1>
-        <p>Effective date: February 9, 2026</p>
+        <p>Effective date: February 13, 2026</p>
       </div>
 
       <div class="card">
         <h3>Overview</h3>
-        <p>GTLabs72 respects your privacy. This policy explains how Smart Notifier and other GTLabs72 products handle data.</p>
+        <p>Smart Notifier automates phone sound and notification modes using your rules and selected triggers. We designed the app to process data on your device whenever possible.</p>
 
-        <h3>Information We Collect</h3>
+        <h3>Data We Process</h3>
         <ul class="checklist">
-          <li>App settings you configure (stored locally by default)</li>
-          <li>Optional diagnostic data to improve stability</li>
+          <li>Automation rules, profiles, and settings you configure in the app</li>
+          <li>Schedule data (day/time triggers) used to run your rules</li>
+          <li>Optional trigger data you enable, such as Wi-Fi SSID, Bluetooth device name, calendar event details, activity state, and geofence/location context</li>
         </ul>
 
-        <h3>How We Use Information</h3>
+        <h3>Data We Do Not Collect</h3>
         <ul class="checklist">
-          <li>Enable core app functionality</li>
-          <li>Maintain reliability and performance</li>
-          <li>Provide support when you contact us</li>
+          <li>No account registration data (no in-app account, email, or phone signup)</li>
+          <li>No in-app payments, subscriptions, or payment data</li>
+          <li>No sale of personal information</li>
         </ul>
 
-        <h3>Permissions</h3>
-        <p>Smart Notifier may request access to notifications, Do Not Disturb, and optional location services to apply your automation rules.</p>
+        <h3>How Data Is Used</h3>
+        <ul class="checklist">
+          <li>Apply sound/notification profile automation you configure</li>
+          <li>Run trigger checks needed for background automation</li>
+          <li>Provide user-requested support when you contact us</li>
+        </ul>
 
-        <h3>Data Sharing</h3>
-        <p>We do not sell your personal data. We only share data if required by law or to provide essential services.</p>
+        <h3>Permissions and Purpose</h3>
+        <ul class="checklist">
+          <li>Notification and Do Not Disturb access: required to change notification/sound behavior</li>
+          <li>Location (including background location, if enabled): required for geofence/location-based triggers</li>
+          <li>Nearby Wi-Fi and Bluetooth access: required for network/device-based triggers</li>
+          <li>Calendar access: required for calendar event-based triggers</li>
+          <li>Physical activity recognition: required for activity-based triggers</li>
+        </ul>
 
-        <h3>Data Retention</h3>
-        <p>App settings are stored locally by default. Any optional diagnostics are retained only as long as needed to improve performance.</p>
+        <h3>Sharing and Transfers</h3>
+        <p>We do not sell your data. We do not share trigger data with third parties except when required by law.</p>
+
+        <h3>Retention and Deletion</h3>
+        <p>Automation settings are stored locally on your device until you change, reset, or uninstall the app. Since Smart Notifier does not provide user accounts, there is no account deletion workflow.</p>
+
+        <h3>Children</h3>
+        <p>Smart Notifier is for a general audience and is not directed to children.</p>
 
         <h3>Contact</h3>
-        <p>If you have questions about privacy, email <a class="text-link" href="mailto:support@gtlabs72.com">support@gtlabs72.com</a>.</p>
+        <p>If you have questions about privacy, email <a class="text-link" href="mailto:gtlabs72@gmail.com">gtlabs72@gmail.com</a>.</p>
       </div>
     </div>
   </main>
