--- a/terms.html
+++ b/terms.html
@@ -26,7 +26,7 @@
       <a class="logo" href="index.html">GTLabs72</a>
       <div class="header-actions">
         <button class="theme-toggle" type="button" data-theme-toggle aria-label="Toggle theme">Dark</button>
-        <a class="cta" href="mailto:support@gtlabs72.com">Contact</a>
+        <a class="cta" href="mailto:gtlabs72@gmail.com">Contact</a>
       </div>
     </div>
   </header>
@@ -59,7 +59,7 @@
         <p>We may update these terms occasionally. The latest version will always be posted here.</p>
 
         <h3>Contact</h3>
-        <p>If you have questions about these terms, email <a class="text-link" href="mailto:support@gtlabs72.com">support@gtlabs72.com</a>.</p>
+        <p>If you have questions about these terms, email <a class="text-link" href="mailto:gtlabs72@gmail.com">gtlabs72@gmail.com</a>.</p>
       </div>
     </div>
   </main>
