--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#f5f7fb" />
-  <title>GTLabs72 — Software Solutions & Mobile Apps</title>
-  <meta name="description" content="GTLabs72 builds clean, reliable software solutions and mobile apps. Discover Smart Notifier, an intelligent sound mode automation app." />
+  <title>Smart Notifier - GTLabs72</title>
+  <meta name="description" content="Smart Notifier automates phone sound and notification modes using schedules and optional context triggers." />
   <meta name="robots" content="index, follow" />
   <script>
     (function () {
@@ -16,313 +16,119 @@
     })();
   </script>
 
-  <meta property="og:title" content="GTLabs72 — Software Solutions & Mobile Apps" />
-  <meta property="og:description" content="GTLabs72 builds clean, reliable software solutions and mobile apps. Discover Smart Notifier." />
+  <meta property="og:title" content="Smart Notifier - GTLabs72" />
+  <meta property="og:description" content="Automates phone sound and notification modes based on schedules and triggers." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://gtlabs72.com/" />
-
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="GTLabs72 — Software Solutions & Mobile Apps" />
-  <meta name="twitter:description" content="GTLabs72 builds clean, reliable software solutions and mobile apps. Discover Smart Notifier." />
+  <meta property="og:url" content="https://gtlabs72.net/" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Source+Sans+3:wght@400;500;600&display=swap" rel="stylesheet" />
-
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&family=Source+Sans+3:wght@400;500;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="data:," />
-
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "GTLabs72",
-    "url": "https://gtlabs72.com/",
-    "email": "support@gtlabs72.com",
-    "description": "Software solutions and mobile apps studio.",
-    "sameAs": []
-  }
-  </script>
-
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
-    "name": "Smart Notifier",
-    "applicationCategory": "UtilitiesApplication",
-    "operatingSystem": "Android, iOS",
-    "description": "Automatically updates your phone's sound mode based on your settings and schedule.",
-    "offers": {"@type": "Offer", "price": "0", "priceCurrency": "USD"}
-  }
-  </script>
 </head>
 <body>
+  <div class="bg-orb bg-orb-a" aria-hidden="true"></div>
+  <div class="bg-orb bg-orb-b" aria-hidden="true"></div>
+
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="index.html">GTLabs72</a>
       <nav class="nav">
-        <a href="#services">Solutions</a>
-        <a href="#apps">Apps</a>
-        <a href="#smart-notifier">Smart Notifier</a>
+        <a href="#features">Features</a>
+        <a href="#permissions">Permissions</a>
         <a href="#support">Support</a>
       </nav>
       <div class="header-actions">
         <button class="theme-toggle" type="button" data-theme-toggle aria-label="Toggle theme">Dark</button>
-        <a class="cta" href="mailto:support@gtlabs72.com">Contact</a>
+        <a class="cta" href="mailto:gtlabs72@gmail.com">Contact</a>
       </div>
     </div>
   </header>
 
   <main>
-    <section class="hero">
-      <div class="container hero-grid">
-        <div>
-          <p class="eyebrow">Software studio</p>
-          <h1>Clean software. Smart mobile experiences.</h1>
-          <p class="lead">GTLabs72 builds focused software solutions and mobile apps with clarity, stability, and performance.</p>
-          <div class="hero-actions">
-            <a class="btn" href="#smart-notifier">Explore Smart Notifier</a>
-            <a class="btn ghost" href="#services">Our Solutions</a>
-          </div>
-          <div class="trust">
-            <div>
-              <span class="stat">Reliable</span>
-              <span class="sub">Automation you can trust</span>
-            </div>
-            <div>
-              <span class="stat">Minimal</span>
-              <span class="sub">No noise, just results</span>
-            </div>
-            <div>
-              <span class="stat">Modern</span>
-              <span class="sub">Built for today</span>
-            </div>
-          </div>
-        </div>
-        <div class="hero-card">
-          <div class="card-label">Featured App</div>
-          <h2>Smart Notifier</h2>
-          <p>Automatically updates your sound mode based on your settings, schedule, and context.</p>
-          <ul class="checklist">
-            <li>Rule-based sound profiles</li>
-            <li>Schedule and location triggers</li>
-            <li>Battery-aware automation</li>
-          </ul>
-          <a class="text-link" href="#smart-notifier">View app details</a>
+    <section class="hero minimal-hero">
+      <div class="container">
+        <p class="eyebrow">Android Utility</p>
+        <h1 class="reveal">Automate phone sound modes with Smart Notifier</h1>
+        <p class="lead reveal">Smart Notifier switches ring, vibrate, and silent modes based on your rules and triggers, so your phone behavior matches your day.</p>
+        <div class="hero-actions reveal">
+          <a class="btn" href="privacy.html">Privacy Policy</a>
+          <a class="btn ghost" href="#support">Support</a>
         </div>
       </div>
     </section>
 
-    <section id="services" class="section">
+    <section id="features" class="section">
       <div class="container">
-        <div class="section-head">
-          <p class="eyebrow">Solutions</p>
-          <h2>Software solutions built for clarity</h2>
-          <p>We deliver focused products and automation-first software that remove friction from daily workflows.</p>
+        <div class="section-head reveal">
+          <p class="eyebrow">Core Features</p>
+          <h2>Only what you need</h2>
         </div>
         <div class="grid-3">
-          <article class="card">
-            <h3>Product Engineering</h3>
-            <p>Lean build cycles, rigorous QA, and maintainable code that scales with your roadmap.</p>
+          <article class="card reveal">
+            <h3>Profiles</h3>
+            <p>Create sound profiles and assign them to different situations.</p>
           </article>
-          <article class="card">
-            <h3>Mobile Apps</h3>
-            <p>Native-feeling experiences with polished performance, accessibility, and reliability.</p>
+          <article class="card reveal">
+            <h3>Schedule Triggers</h3>
+            <p>Switch modes automatically by day and time.</p>
           </article>
-          <article class="card">
-            <h3>Automation & Integrations</h3>
-            <p>Smart workflows, device automation, and integrations that save time and reduce errors.</p>
-          </article>
-        </div>
-      </div>
-    </section>
-
-    <section id="apps" class="section alt">
-      <div class="container">
-        <div class="section-head">
-          <p class="eyebrow">Apps</p>
-          <h2>Focused apps that solve real problems</h2>
-          <p>Every GTLabs72 app is designed to be fast, dependable, and easy to understand.</p>
-        </div>
-        <div class="app-strip">
-          <div class="app-badge">
-            <span class="app-name">Smart Notifier</span>
-            <span class="app-desc">Automatic sound mode updates</span>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="smart-notifier" class="section">
-      <div class="container">
-        <div class="section-head">
-          <p class="eyebrow">Smart Notifier</p>
-          <h2>Automatic sound mode updates that respect your schedule</h2>
-          <p>Smart Notifier keeps your phone in the right mode without constant toggling. Configure once, and it quietly handles the rest.</p>
-        </div>
-
-        <div class="grid-2">
-          <article class="card">
-            <h3>App Overview</h3>
-            <p>Smart Notifier updates your sound mode based on your settings and triggers, so you never miss important moments or alerts.</p>
-            <ul class="checklist">
-              <li>Silent during meetings</li>
-              <li>Vibrate during commute</li>
-              <li>Ring after hours</li>
-            </ul>
-          </article>
-          <article class="card">
-            <h3>Key Features</h3>
-            <ul class="checklist">
-              <li>Rule-based profiles</li>
-              <li>Schedule-based automation</li>
-              <li>Location and time triggers</li>
-              <li>Quick override widget</li>
-              <li>Battery-friendly behavior</li>
-            </ul>
-          </article>
-        </div>
-
-        <div class="grid-2">
-          <article class="card">
-            <h3>How It Works</h3>
-            <ol class="steps">
-              <li>Create sound profiles</li>
-              <li>Attach triggers (time, location, calendar)</li>
-              <li>Smart Notifier switches modes automatically</li>
-            </ol>
-          </article>
-          <article class="card">
-            <h3>Platform & Availability</h3>
-            <ul class="checklist">
-              <li>Category: Utilities</li>
-              <li>Platforms: Android, iOS (planned)</li>
-              <li>Release status: Coming soon</li>
-            </ul>
-          </article>
-        </div>
-
-        <div class="grid-2">
-          <article class="card">
-            <h3>Permissions & Data Use</h3>
-            <p>Smart Notifier only uses the permissions needed to switch sound modes and apply your rules.</p>
-            <ul class="checklist">
-              <li>Notification access (to apply rules)</li>
-              <li>Do Not Disturb access (to change modes)</li>
-              <li>Location (optional, for location rules)</li>
-            </ul>
-          </article>
-          <article class="card">
-            <h3>Privacy Summary</h3>
-            <p>We minimize data collection and do not sell personal information.</p>
-            <ul class="checklist">
-              <li>No third-party data sale</li>
-              <li>Settings stored locally by default</li>
-              <li>Transparent permissions</li>
-            </ul>
-            <a class="text-link" href="privacy.html">Read full privacy policy</a>
-          </article>
-        </div>
-
-        <div class="grid-2">
-          <article class="card">
-            <h3>App Store Assets</h3>
-            <p>Use these sections to publish your listing quickly.</p>
-            <ul class="checklist">
-              <li>Short description: Automatic sound mode updates</li>
-              <li>Full description: Configure rules and Smart Notifier adapts your sound profile automatically.</li>
-              <li>Keywords: sound mode, automation, silent, notifications</li>
-            </ul>
-          </article>
-          <article class="card">
-            <h3>Screenshots & Media</h3>
-            <p>Placeholders ready for store media.</p>
-            <div class="media-grid">
-              <div class="media">Screenshot 1</div>
-              <div class="media">Screenshot 2</div>
-              <div class="media">Screenshot 3</div>
-              <div class="media">App preview</div>
-            </div>
-          </article>
-        </div>
-
-        <div class="grid-2">
-          <article class="card">
-            <h3>Pricing</h3>
-            <ul class="checklist">
-              <li>Free plan available</li>
-              <li>Optional premium features (coming soon)</li>
-            </ul>
-          </article>
-          <article class="card">
-            <h3>Changelog</h3>
-            <ul class="checklist">
-              <li>v1.0 (planned): Initial release with rule automation</li>
-            </ul>
+          <article class="card reveal">
+            <h3>Context Triggers</h3>
+            <p>Use optional Wi-Fi, Bluetooth, calendar, activity, or geofence triggers.</p>
           </article>
         </div>
       </div>
     </section>
 
-    <section id="support" class="section alt">
+    <section id="permissions" class="section alt">
       <div class="container">
-        <div class="section-head">
-          <p class="eyebrow">Support</p>
-          <h2>We are here to help</h2>
-          <p>For support, press, or partnership inquiries, reach us directly.</p>
+        <div class="section-head reveal">
+          <p class="eyebrow">Permissions & Privacy</p>
+          <h2>Transparent data handling</h2>
+          <p>Smart Notifier has no in-app accounts, no subscriptions, and no ads. Settings are stored locally by default.</p>
         </div>
         <div class="grid-2">
-          <article class="card">
-            <h3>Contact</h3>
-            <p>Email: <a class="text-link" href="mailto:support@gtlabs72.com">support@gtlabs72.com</a></p>
-            <p>Response time: 1-2 business days</p>
+          <article class="card reveal">
+            <h3>May Request Access To</h3>
+            <ul class="checklist">
+              <li>Notification and Do Not Disturb control</li>
+              <li>Location and background location (if you enable geofence rules)</li>
+              <li>Nearby Wi-Fi, Bluetooth, calendar, and activity recognition</li>
+            </ul>
           </article>
-          <article class="card">
-            <h3>Helpful Links</h3>
+          <article class="card reveal">
+            <h3>Legal Pages</h3>
             <ul class="checklist">
               <li><a class="text-link" href="privacy.html">Privacy Policy</a></li>
               <li><a class="text-link" href="terms.html">Terms of Use</a></li>
             </ul>
           </article>
         </div>
+      </div>
+    </section>
 
-        <div class="card faq">
-          <h3>FAQ</h3>
-          <div class="faq-grid">
-            <div>
-              <h4>Will Smart Notifier drain battery?</h4>
-              <p>No. It is designed to run efficiently and only activates when needed.</p>
-            </div>
-            <div>
-              <h4>Does it work offline?</h4>
-              <p>Yes. All rules and automation can run without a network connection.</p>
-            </div>
-            <div>
-              <h4>Can I override a rule?</h4>
-              <p>Yes. Use the quick override widget to change modes instantly.</p>
-            </div>
-            <div>
-              <h4>Where is my data stored?</h4>
-              <p>Settings are stored locally by default.</p>
-            </div>
-          </div>
-        </div>
+    <section id="support" class="section">
+      <div class="container">
+        <article class="card reveal support-card">
+          <h3>Support</h3>
+          <p>Email: <a class="text-link" href="mailto:gtlabs72@gmail.com">gtlabs72@gmail.com</a></p>
+          <p>Response time: 1-2 business days</p>
+        </article>
       </div>
     </section>
   </main>
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <div>
-        <div class="logo">GTLabs72</div>
-        <p>Software solutions and mobile apps.</p>
-      </div>
+      <p class="logo">GTLabs72</p>
       <div class="footer-links">
         <a href="privacy.html">Privacy Policy</a>
         <a href="terms.html">Terms of Use</a>
-        <a href="mailto:support@gtlabs72.com">Support</a>
+        <a href="mailto:gtlabs72@gmail.com">Support</a>
       </div>
-      <p class="small">© 2026 GTLabs72. All rights reserved.</p>
+      <p class="small">© 2026 GTLabs72</p>
     </div>
   </footer>
   <script src="script.js" defer></script>
