--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#f5f7fb" />
-  <title>Smart Notifier - GTLabs72</title>
-  <meta name="description" content="Smart Notifier automates phone sound and notification modes using schedules and optional context triggers." />
+  <title>GTLabs72 - Mobile Apps</title>
+  <meta name="description" content="GTLabs72 builds focused mobile utilities. Current release: Smart Notifier." />
   <meta name="robots" content="index, follow" />
   <script>
     (function () {
@@ -16,8 +16,8 @@
     })();
   </script>
 
-  <meta property="og:title" content="Smart Notifier - GTLabs72" />
-  <meta property="og:description" content="Automates phone sound and notification modes based on schedules and triggers." />
+  <meta property="og:title" content="GTLabs72 - Mobile Apps" />
+  <meta property="og:description" content="Current release: Smart Notifier." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://gtlabs72.net/" />
 
@@ -35,12 +35,18 @@
     <div class="container header-inner">
       <a class="logo" href="index.html">GTLabs72</a>
       <nav class="nav">
-        <a href="#features">Features</a>
-        <a href="#permissions">Permissions</a>
+        <a href="#release">Current Release</a>
         <a href="#support">Support</a>
       </nav>
       <div class="header-actions">
-        <button class="theme-toggle" type="button" data-theme-toggle aria-label="Toggle theme">Dark</button>
+        <button class="theme-toggle" type="button" data-theme-toggle aria-label="Toggle theme">
+          <span class="theme-icon" aria-hidden="true">
+            <svg viewBox="0 0 24 24" role="img" focusable="false" aria-hidden="true">
+              <circle cx="12" cy="12" r="4"></circle>
+              <path d="M12 2v2M12 20v2M2 12h2M20 12h2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M19.07 4.93l-1.41 1.41M6.34 17.66l-1.41 1.41"></path>
+            </svg>
+          </span>
+        </button>
         <a class="cta" href="mailto:gtlabs72@gmail.com">Contact</a>
       </div>
     </div>
@@ -49,61 +55,37 @@
   <main>
     <section class="hero minimal-hero">
       <div class="container">
-        <p class="eyebrow">Android Utility</p>
-        <h1 class="reveal">Automate phone sound modes with Smart Notifier</h1>
-        <p class="lead reveal">Smart Notifier switches ring, vibrate, and silent modes based on your rules and triggers, so your phone behavior matches your day.</p>
+        <p class="eyebrow">GTLabs72</p>
+        <h1 class="reveal">Focused Android tools with clean automation.</h1>
+        <p class="lead reveal">We build practical mobile apps designed for reliability and low friction in day-to-day use.</p>
         <div class="hero-actions reveal">
-          <a class="btn" href="privacy.html">Privacy Policy</a>
-          <a class="btn ghost" href="#support">Support</a>
+          <a class="btn" href="app/smart_notifier.html">View Smart Notifier</a>
+          <a class="btn ghost" href="#release">Current Release</a>
         </div>
       </div>
     </section>
 
-    <section id="features" class="section">
+    <section id="release" class="section alt">
       <div class="container">
         <div class="section-head reveal">
-          <p class="eyebrow">Core Features</p>
-          <h2>Only what you need</h2>
-        </div>
-        <div class="grid-3">
-          <article class="card reveal">
-            <h3>Profiles</h3>
-            <p>Create sound profiles and assign them to different situations.</p>
-          </article>
-          <article class="card reveal">
-            <h3>Schedule Triggers</h3>
-            <p>Switch modes automatically by day and time.</p>
-          </article>
-          <article class="card reveal">
-            <h3>Context Triggers</h3>
-            <p>Use optional Wi-Fi, Bluetooth, calendar, activity, or geofence triggers.</p>
-          </article>
-        </div>
-      </div>
-    </section>
-
-    <section id="permissions" class="section alt">
-      <div class="container">
-        <div class="section-head reveal">
-          <p class="eyebrow">Permissions & Privacy</p>
-          <h2>Transparent data handling</h2>
-          <p>Smart Notifier has no in-app accounts, no subscriptions, and no ads. Settings are stored locally by default.</p>
+          <p class="eyebrow">Current Release</p>
+          <h2>Smart Notifier</h2>
+          <p>Automates phone sound and notification modes using schedule and optional context triggers.</p>
         </div>
         <div class="grid-2">
           <article class="card reveal">
-            <h3>May Request Access To</h3>
+            <div class="card-label">Live Now</div>
+            <h3>Smart Notifier for Android</h3>
             <ul class="checklist">
-              <li>Notification and Do Not Disturb control</li>
-              <li>Location and background location (if you enable geofence rules)</li>
-              <li>Nearby Wi-Fi, Bluetooth, calendar, and activity recognition</li>
+              <li>Profiles and day/time automation</li>
+              <li>Optional Wi-Fi, Bluetooth, calendar, activity, and geofence triggers</li>
+              <li>No in-app accounts, ads, or subscriptions</li>
             </ul>
           </article>
           <article class="card reveal">
-            <h3>Legal Pages</h3>
-            <ul class="checklist">
-              <li><a class="text-link" href="privacy.html">Privacy Policy</a></li>
-              <li><a class="text-link" href="terms.html">Terms of Use</a></li>
-            </ul>
+            <h3>App Page</h3>
+            <p>See full details, screenshots, permissions, and support information on the dedicated app page.</p>
+            <p><a class="text-link" href="app/smart_notifier.html">Open Smart Notifier page</a></p>
           </article>
         </div>
       </div>
@@ -124,6 +106,7 @@
     <div class="container footer-inner">
       <p class="logo">GTLabs72</p>
       <div class="footer-links">
+        <a href="app/smart_notifier.html">Smart Notifier</a>
         <a href="privacy.html">Privacy Policy</a>
         <a href="terms.html">Terms of Use</a>
         <a href="mailto:gtlabs72@gmail.com">Support</a>
