--- a/terms.html
+++ b/terms.html
@@ -25,7 +25,14 @@
     <div class="container header-inner">
       <a class="logo" href="index.html">GTLabs72</a>
       <div class="header-actions">
-        <button class="theme-toggle" type="button" data-theme-toggle aria-label="Toggle theme">Dark</button>
+        <button class="theme-toggle" type="button" data-theme-toggle aria-label="Toggle theme">
+          <span class="theme-icon" aria-hidden="true">
+            <svg viewBox="0 0 24 24" role="img" focusable="false" aria-hidden="true">
+              <circle cx="12" cy="12" r="4"></circle>
+              <path d="M12 2v2M12 20v2M2 12h2M20 12h2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M19.07 4.93l-1.41 1.41M6.34 17.66l-1.41 1.41"></path>
+            </svg>
+          </span>
+        </button>
         <a class="cta" href="mailto:gtlabs72@gmail.com">Contact</a>
       </div>
     </div>
