--- a/app/smart_notifier.html
+++ b/app/smart_notifier.html
@@ -20,6 +20,13 @@
   <meta property="og:description" content="Automates phone sound and notification modes based on schedules and triggers." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://gtlabs72.net/app/smart_notifier.html" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KY1963HEJK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag("js", new Date());
+    gtag("config", "G-KY1963HEJK");
+  </script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -61,7 +68,7 @@
         <h1 class="reveal">Automate phone sound modes with Smart Notifier</h1>
         <p class="lead reveal">Smart Notifier switches ring, vibrate, and silent modes based on your rules and triggers, so your phone behavior matches your day.</p>
         <div class="hero-actions reveal">
-          <a class="btn" href="../privacy.html">Privacy Policy</a>
+          <a class="btn" href="../privacy.html" data-analytics-event="open_privacy_policy" data-analytics-location="smart_notifier_hero">Privacy Policy</a>
           <a class="btn ghost" href="#support">Support</a>
         </div>
       </div>
