--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
   <meta property="og:description" content="Current release: Smart Notifier." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://gtlabs72.net/" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KY1963HEJK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag("js", new Date());
+    gtag("config", "G-KY1963HEJK");
+  </script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -59,7 +66,7 @@
         <h1 class="reveal">Focused Android tools with clean automation.</h1>
         <p class="lead reveal">We build practical mobile apps designed for reliability and low friction in day-to-day use.</p>
         <div class="hero-actions reveal">
-          <a class="btn" href="app/smart_notifier.html">View Smart Notifier</a>
+          <a class="btn" href="app/smart_notifier.html" data-analytics-event="open_smart_notifier" data-analytics-location="home_hero">View Smart Notifier</a>
           <a class="btn ghost" href="#release">Current Release</a>
         </div>
       </div>
@@ -85,7 +92,7 @@
           <article class="card reveal">
             <h3>App Page</h3>
             <p>See full details, screenshots, permissions, and support information on the dedicated app page.</p>
-            <p><a class="text-link" href="app/smart_notifier.html">Open Smart Notifier page</a></p>
+            <p><a class="text-link" href="app/smart_notifier.html" data-analytics-event="open_smart_notifier" data-analytics-location="home_release_card">Open Smart Notifier page</a></p>
           </article>
         </div>
       </div>
