--- a/terms.html
+++ b/terms.html
@@ -6,6 +6,13 @@
   <meta name="theme-color" content="#f5f7fb" />
   <title>Terms of Use — GTLabs72</title>
   <meta name="description" content="GTLabs72 terms of use for Smart Notifier and other products." />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KY1963HEJK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag("js", new Date());
+    gtag("config", "G-KY1963HEJK");
+  </script>
   <script>
     (function () {
       try {
