--- a/app/smart_notifier.html
+++ b/app/smart_notifier.html
@@ -20,13 +20,6 @@
   <meta property="og:description" content="Automates phone sound and notification modes based on schedules and triggers." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://gtlabs72.net/app/smart_notifier.html" />
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KY1963HEJK"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag("js", new Date());
-    gtag("config", "G-KY1963HEJK");
-  </script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -165,6 +158,7 @@
         <a href="../index.html">Home</a>
         <a href="../privacy.html">Privacy Policy</a>
         <a href="../terms.html">Terms of Use</a>
+        <a href="#" data-open-consent>Cookie Preferences</a>
         <a href="mailto:gtlabs72@gmail.com">Support</a>
       </div>
       <p class="small">© 2026 GTLabs72</p>
