--- a/index.html
+++ b/index.html
@@ -20,13 +20,6 @@
   <meta property="og:description" content="Current release: Smart Notifier." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://gtlabs72.net/" />
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KY1963HEJK"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag("js", new Date());
-    gtag("config", "G-KY1963HEJK");
-  </script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -116,6 +109,7 @@
         <a href="app/smart_notifier.html">Smart Notifier</a>
         <a href="privacy.html">Privacy Policy</a>
         <a href="terms.html">Terms of Use</a>
+        <a href="#" data-open-consent>Cookie Preferences</a>
         <a href="mailto:gtlabs72@gmail.com">Support</a>
       </div>
       <p class="small">© 2026 GTLabs72</p>
