--- a/privacy.html
+++ b/privacy.html
@@ -6,13 +6,6 @@
   <meta name="theme-color" content="#f5f7fb" />
   <title>Privacy Policy — GTLabs72</title>
   <meta name="description" content="GTLabs72 privacy policy for Smart Notifier and other products." />
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KY1963HEJK"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag("js", new Date());
-    gtag("config", "G-KY1963HEJK");
-  </script>
   <script>
     (function () {
       try {
@@ -50,12 +43,15 @@
       <div class="section-head">
         <p class="eyebrow">Privacy</p>
         <h1>Privacy Policy</h1>
-        <p>Effective date: February 13, 2026</p>
+        <p>Effective date: February 14, 2026</p>
       </div>
 
       <div class="card">
         <h3>Overview</h3>
         <p>Smart Notifier automates phone sound and notification modes using your rules and selected triggers. We designed the app to process data on your device whenever possible.</p>
+
+        <h3>Data Controller</h3>
+        <p>GTLabs72 is the data controller for personal data processed through this website and Smart Notifier support communications. Contact: <a class="text-link" href="mailto:gtlabs72@gmail.com">gtlabs72@gmail.com</a>.</p>
 
         <h3>Data We Process</h3>
         <ul class="checklist">
@@ -78,6 +74,16 @@
           <li>Provide user-requested support when you contact us</li>
         </ul>
 
+        <h3>Website Analytics</h3>
+        <p>Our website uses Google Analytics (GA4) to understand page visits and basic interaction events (for example, app page link clicks). This may include technical data such as IP-derived location (country/city level), browser type, pages visited, and approximate device information.</p>
+
+        <h3>Legal Bases (GDPR)</h3>
+        <ul class="checklist">
+          <li>Consent: analytics cookies and analytics event measurement on the website</li>
+          <li>Legitimate interests: responding to support requests and maintaining service reliability</li>
+          <li>Contract/performance: where processing is required to deliver app functionality you enable</li>
+        </ul>
+
         <h3>Permissions and Purpose</h3>
         <ul class="checklist">
           <li>Notification and Do Not Disturb access: required to change notification/sound behavior</li>
@@ -88,16 +94,23 @@
         </ul>
 
         <h3>Sharing and Transfers</h3>
-        <p>We do not sell your data. We do not share trigger data with third parties except when required by law.</p>
+        <p>We do not sell your data. App trigger data is not sold or shared with third parties except when required by law. Website analytics data is processed by Google Analytics as our analytics service provider.</p>
+
+        <h3>International Transfers</h3>
+        <p>Analytics data may be processed outside your country, including in the United States, through Google Analytics infrastructure. Where required, transfers rely on applicable legal safeguards provided by Google.</p>
 
         <h3>Retention and Deletion</h3>
-        <p>Automation settings are stored locally on your device until you change, reset, or uninstall the app. Since Smart Notifier does not provide user accounts, there is no account deletion workflow.</p>
+        <p>Automation settings are stored locally on your device until you change, reset, or uninstall the app. Since Smart Notifier does not provide user accounts, there is no account deletion workflow. Analytics retention is managed in Google Analytics property settings.</p>
 
         <h3>Children</h3>
         <p>Smart Notifier is for a general audience and is not directed to children.</p>
 
+        <h3>Your Privacy Rights</h3>
+        <p>Depending on your location, you may have rights to access, correct, delete, restrict, object to processing, or request portability of personal data. You may also withdraw analytics consent at any time using Cookie Preferences. To exercise rights, email <a class="text-link" href="mailto:gtlabs72@gmail.com">gtlabs72@gmail.com</a>.</p>
+
         <h3>Contact</h3>
         <p>If you have questions about privacy, email <a class="text-link" href="mailto:gtlabs72@gmail.com">gtlabs72@gmail.com</a>.</p>
+        <p><a class="text-link" href="#" data-open-consent>Cookie Preferences</a></p>
       </div>
     </div>
   </main>
