--- a/terms.html
+++ b/terms.html
@@ -6,13 +6,6 @@
   <meta name="theme-color" content="#f5f7fb" />
   <title>Terms of Use — GTLabs72</title>
   <meta name="description" content="GTLabs72 terms of use for Smart Notifier and other products." />
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KY1963HEJK"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag("js", new Date());
-    gtag("config", "G-KY1963HEJK");
-  </script>
   <script>
     (function () {
       try {
@@ -50,15 +43,21 @@
       <div class="section-head">
         <p class="eyebrow">Legal</p>
         <h1>Terms of Use</h1>
-        <p>Effective date: February 9, 2026</p>
+        <p>Effective date: February 14, 2026</p>
       </div>
 
       <div class="card">
         <h3>Acceptance of Terms</h3>
         <p>By using GTLabs72 products, you agree to these terms.</p>
 
+        <h3>Service Scope</h3>
+        <p>These terms apply to the Smart Notifier app, the GTLabs72 website, and related support communications.</p>
+
         <h3>Use of the App</h3>
-        <p>You agree to use Smart Notifier and other GTLabs72 products lawfully and as intended.</p>
+        <p>You agree to use Smart Notifier lawfully, only on devices and accounts you are authorized to use, and not in ways that interfere with service operation.</p>
+
+        <h3>Automation Responsibility</h3>
+        <p>You are responsible for reviewing your configured profiles, triggers, and overrides. Smart Notifier executes automation rules based on your settings.</p>
 
         <h3>Intellectual Property</h3>
         <p>All content and software are the property of GTLabs72.</p>
@@ -69,11 +68,15 @@
         <h3>Limitation of Liability</h3>
         <p>GTLabs72 is not liable for indirect or incidental damages arising from use of the services.</p>
 
+        <h3>Updates and Availability</h3>
+        <p>We may update, suspend, or discontinue features to improve reliability, compliance, or security.</p>
+
         <h3>Changes to Terms</h3>
         <p>We may update these terms occasionally. The latest version will always be posted here.</p>
 
         <h3>Contact</h3>
         <p>If you have questions about these terms, email <a class="text-link" href="mailto:gtlabs72@gmail.com">gtlabs72@gmail.com</a>.</p>
+        <p><a class="text-link" href="#" data-open-consent>Cookie Preferences</a></p>
       </div>
     </div>
   </main>
